# frappe-user-switch

./: README.md  pyproject.toml
frappe_user_switch/: hooks.py  modules.txt
frappe_user_switch/api/: auth.py
frappe_user_switch/doc/: Work.md
frappe_user_switch/overwrite/: session.py
frappe_user_switch/public/js/: frappe_user_switch.js  nav_html.js  users_sid.js
